--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "dd-trace": "5.67.0",
     "dotenv": "8.0.0",
     "dotenv-expand": "5.1.0",
+    "fast-xml-parser": "^5.3.8",
     "graphql-ws": "^6.0.4",
     "html-minifier-terser": "^5.1.1",
     "kysely": "^0.28.5",
