--- a/.env.example
+++ b/.env.example
@@ -154,11 +154,12 @@ REDIS_URL='redis://localhost:6379'
 # STRIPE_PUBLISHABLE_KEY=''
 # STRIPE_WEBHOOK_SECRET=''
 # Disable the built in Mattermost webhook integration
-# MATTERMOST_DISABLED='false'
+# MATTERMOST_WEBHOOK_INTEGRATION_DISABLED='false'
 # For private instances with SSO and the Mattermost plugin, set the secret and URL
 # MATTERMOST_SECRET='key_MATTERMOST_SECRET'
 # MATTERMOST_URL='https://mattermost.example.com'
-# MSTEAMS_DISABLED='false'
+# Disable the built in MS Teams webbhook integration
+# MSTEAMS_WEBHOOK_INTEGRATION_DISABLED ='false'
 
 # MAIL
 # MAIL GLOBALS. PROVIDER: mailgun | google | debug | smtp
