--- a/.github/workflows/release-to-prod.yml
+++ b/.github/workflows/release-to-prod.yml
@@ -37,14 +37,20 @@ jobs:
             JOB_ID_DONE=$(echo $RES | jq '.id // empty')
             [ -z "$JOB_ID_DONE" ] && exit 1 || exit 0
       - name: Poll Production Release
-        uses: artiz/poll-endpoint@1.0.2
-        with:
-          url: https://gitlab.com/api/v4/projects/${{ vars.GITLAB_PROJECT_ID }}/jobs/${{ env.JOB_ID }}?access_token=${{ secrets.GITLAB_DEPLOYMENT_ACCESS_TOKEN }}
-          method: GET
-          expect-status: 200
-          expect-response-regex: '"status":"success"'
-          timeout: 120000
-          interval: 3000
+        timeout-minutes: 30
+        run: |
+          while true; do
+            STATUS=$(curl -s "https://gitlab.com/api/v4/projects/${{ vars.GITLAB_PROJECT_ID }}/jobs/${{ env.JOB_ID }}" --header 'PRIVATE-TOKEN: ${{ secrets.GITLAB_DEPLOYMENT_ACCESS_TOKEN }}' | jq -r '.status')
+            echo "Current status: $STATUS"
+            if [ "$STATUS" == "success" ]; then
+              echo "Job completed successfully."
+              exit 0
+            elif [[ "$STATUS" == "failed" || "$STATUS" == "canceled" ]]; then
+              echo "Job failed or was canceled."
+              exit 1
+            fi
+            sleep 15
+          done
 
       - name: Report Status
         if: failure()
